llvm/test/tools/llubi/lib_read_nullary_string.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

declare i32 @puts(ptr)

define i32 @main() {
  %1 = call i32 @puts(ptr null)

  ret i32 0
}
; CHECK: Entering function: main
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   %1 = call i32 @puts(ptr null) at @main
; CHECK-NEXT: Immediate UB detected: Invalid memory access via a pointer with nullary provenance.
; CHECK-NEXT: error: Execution of function 'main' failed.
